Rock-Paper-Scissors game is fully updated for user

--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/style.css">
     <title>Document</title>
 </head>
-<body class="bg-w">
+<body>
     <nav>
-        <h2 class="text-blue-600 text-2xl font-extrabold">Fun Game Zone</h2>
+        <picture>
+            
+        </picture>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </nav>
-    
-    <button class="mx-10 my-10 px-4 py-1 text-xl text-purple-600 font-semibold rounded-full border-4 border-purple-600 hover:text-white hover:bg-purple-600 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-offset-2" > 
-        <a href="./dist/rock-paper-scissor.html">Checkout!!!</a>
-    </button>
+    <div class="gret">
+        <div class="user"><p>Welcome!!</p></div>
+    </div>
 </body>
 </html>
