--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -4,29 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="rps.css">
 </head>
 <body>
-    <section class="cont">
-        <div class="zone-area">
-            <div class="user_res">
-                <img src="images/rock.png" alt="User choice" class="user-choice">
+    <div class="body">
+        <section class="cont">
+            <div class="zone-area">
+                <div class="user_res">
+                    <img src="images/rock.png" alt="User choice" class="user-choice">
+                </div>
+                <div class="cpu_res">
+                    <img src="images/rock.png" alt="CPU choice" class="cpu-choice">
+                </div>
             </div>
-            <div class="cpu_res">
-                <img src="images/rock.png" alt="CPU choice" class="cpu-choice">
+            <div class="res">Let's Play!!!</div>
+            <div class="options">
+                <img src="images/rock.png" alt="Rock" class="options-img rock">
+                <img src="images/paper.png" alt="Paper" class="options-img paper">
+                <img src="images/scissors.png" alt="Scissors" class="options-img scissors">
+            </div>            
+            <div class="score">
+                <div class="dis player-score">
+                    <img src="images/person_24dp_0000F5_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <p class="score-value p-value">0</p>
+                </div>
+                <div class="bar">:</div>
+                <div class="dis cpu-score"><p class="score-valuescroe c-value">0</p><img src="images/person_24dp_0000F5_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                </div>
             </div>
-        </div>
-        <div class="res">Let's Play!!!</div>
-        <div class="options">
-            <img src="images/rock.png" alt="Rock" class="options-img rock">
-            <img src="images/paper.png" alt="Paper" class="options-img paper">
-            <img src="images/scissors.png" alt="Scissors" class="options-img scissors">
-        </div>            
-        <div class="score">
-            <div class="player-score"></div>
-            <div class="cpu-score"></div>
-        </div>
-    </section>
+        </section>
+    </div>
+    
     <script src="rps-js.js"></script>
 </body>
 </html>
