New game is enlisted in this game site

--- a/Rock Paper Scissors/rock-paper-scissor.html
+++ b/Rock Paper Scissors/rock-paper-scissor.html
@@ -51,7 +51,10 @@
                     </div>
                 </div>
             </div>
-            <div class="reset-opt"><p class="reset">Reset</p></div>
+            <div class="rest-opt-area">
+                <div class="reset-opt"><p class="reset">Reset</p></div>
+
+            </div>
         </section>
     </div>
     
