Tic-tac-toe game is updated

--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -15,20 +15,53 @@
         <div></div>
         <div></div>
     </nav>
+
+    <div class="start-popup hide">
+        <div class="message">Sample Message</div>
+        <button class="new-game">New Game</button>
+    </div>
+
     <div class="cont">
-        <!-- <div class="point-box"></div> -->
-        <div class="gamebox">
-            <div class="game-opt-btn">1</div>
-            <div class="game-opt-btn">2</div>
-            <div class="game-opt-btn">3</div>
-            <div class="game-opt-btn">4</div>
-            <div class="game-opt-btn">5</div>
-            <div class="game-opt-btn">6</div>
-            <div class="game-opt-btn">7</div>
-            <div class="game-opt-btn">8</div>
-            <div class="game-opt-btn">9</div>
+                <div class="point-box">
+                    <div class="user-box">
+                        <div class="user-pic">
+                            <img src="/images/person_24dp_0000F5_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                        </div>
+                        <div class="user-point">0</div>
+                    </div>
+                    <div class="cpu-box">
+                        
+                        <div class="cpu-point">0</div>
+                        <div class="cpu-pic">
+                            <img src="/images/person_24dp_0000F5_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+        <div class="turn-opt">
+            <div class="text">X</div>
+            <div class="text">O</div>
+            <div class="slider-X"></div>
         </div>
-        <div class="reset-bnt">PLAY</div>
+        <div class="align">
+            <!-- <div class="text-1">0</div> -->
+            <div class="gamebox">
+                <div class="game-opt-btn"></div>
+                <div class="game-opt-btn"></div>
+                <div class="game-opt-btn"></div>
+                <div class="game-opt-btn"></div>
+                <div class="game-opt-btn"></div>
+                <div class="game-opt-btn"></div>
+                <div class="game-opt-btn"></div>
+                <div class="game-opt-btn"></div>
+                <div class="game-opt-btn"></div>
+            </div>
+            <!-- <div class="text-2">0</div> -->
+        </div>
+        <div>
+
+            <button class="reset-bnt hide">PLAY</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
