Winning Pattern is updated

--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -41,7 +41,7 @@
         <div class="turn-opt">
             <div class="text">X</div>
             <div class="text">O</div>
-            <div class="slider-X"></div>
+            <div class="slider slider-X slider-O"></div>
         </div>
         <div class="align">
             <!-- <div class="text-1">0</div> -->
