Add a responsive ui

--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -64,7 +64,7 @@
             <!-- <div class="text-2">0</div> -->
         </div>
         <div>
-
+            <!-- >>>X is Win!!>>> -->
             <!-- <button class="reset-bnt hide">PLAY</button> -->
         </div>
     </div>
