--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -8,13 +8,13 @@
     
 </head>
 <body>
-    <nav>
+    <!-- <nav>
         <div>
             <div class="logo">MyGame.com</div>
         </div>
         <div></div>
         <div></div>
-    </nav>
+    </nav> -->
 
     <div class="start-popup hide">
         <div class="message">Sample Message</div>
@@ -62,10 +62,10 @@
                 <div class="game-opt-btn"></div>
             </div>
             <!-- <div class="text-2">0</div> -->
-        </div>
-        <div>
-            <!-- >>>X is Win!!>>> -->
-            <!-- <button class="reset-bnt hide">PLAY</button> -->
+            <div class="div2">
+                
+                <button class="reset-bnt hide">PLAY</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
