Rest Button is Updated

--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -31,7 +31,7 @@
                         </div>
                         <div class="user-point">0</div>
                     </div>
-                    <div>-</div>
+                    <div class="side"><div class="vs">v/s</div><div class="round">Round <span>0</span></div></div>
                     <div class="cpu-box">
                         
                         <div class="cpu-point">0</div>
@@ -64,7 +64,7 @@
             <!-- <div class="text-2">0</div> -->
             <div class="div2">
                 
-                <button class="reset-bnt hide">PLAY</button>
+                <button class="reset-bnt hide">RESET</button>
             </div>
         </div>
     </div>
