Side-bar is updated

--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -79,10 +79,34 @@
 
         </section>
 
-        <section>
-            <p>Dark Mode</p>
-            <p>log Out</p>
-            <p>Profile</p>
+        <section class="last-menu-bar">
+            <ul  class="menu-link">
+                <li class="nav-link mode">
+                    <div class="mode list-text">
+                        <div class="mode-area">
+                            <div class="sun-moon"><i class='bx bx-sun'></i></div>
+                            <p>Light Mode</p>
+                            <div class="toggle">
+                                <div class="switch"></div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-link">
+                    <div class="log-out list-text"><a href="#"><i class='bx bx-log-out bx-flip-vertical'></i>
+                            <p>Log Out</p>
+                        </a></div>
+                </li>
+                <li class="nav-link">
+                    <div class="user-acc list-text"><a href="#"><i class='bx bx-user-circle'></i>
+                            <p>Profile</p>
+                        </a></div>
+                </li>
+            </ul>
+
+
+
+
         </section>
     </div>
     <div class="choice">
