local-storage is updated

--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -134,7 +134,7 @@
             </div>
             <div class="side">
                 <div class="vs">v/s</div>
-                <div class="round">Round <span class="round-scroe">1</span></div>
+                <div class="round">Round <span class="round-score">1</span></div>
             </div>
             <div class="cpu-box">
 
