--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -10,14 +10,7 @@
 </head>
 
 <body>
-    <!-- <nav>
-        <div>
-            <div class="logo">MyGame.com</div>
-        </div>
-        <div></div>
-        <div></div>
-    </nav> -->
-    <div class="sidebar">
+    <div class="sidebar mini-sidebar">
         <section>
             <div class="logo-head">
                 <img src="/images/tic-tac-toe.png" alt="Logo">
@@ -80,7 +73,7 @@
         </section>
 
         <section class="last-menu-bar">
-            <ul  class="menu-link">
+            <ul class="menu-link">
                 <li class="nav-link mode">
                     <div class="mode list-text">
                         <div class="mode-area">
@@ -103,75 +96,48 @@
                         </a></div>
                 </li>
             </ul>
+        </section>
+    </div>
+    <div class="popUpMss displayFlex hide">
+        <p>You are winner</p>
+        <button class="continueBtn">Continue</button>
+    </div>
+    <div class="contOfGame gridLayout">
+        <div class="scroeBox gridLayout">
+            <div class="isXBox activeMode displayFlex">
+                <div class="scoreX">
+                    0
+                </div>
+                <p>Team-X</p>
+            </div>
+            <div class="middelBox displayFlex">
+                <div class="vs">V/S</div>
+                <div class="round">Round 1</div>
+            </div>
+            <div class="isYBox activeMode displayFlex">
+                <div class="scoreY">
+                    0
+                </div>
+                <p>Team-Y</p>
+            </div>
 
-
+        </div>
+        <section class="gameBoxCont displayFlex">
+            <div class="gameWrap gridLayout">
+                <div class="game-box-btn box0 displayFlex"></div>
+                <div class="game-box-btn box1 displayFlex"></div>
+                <div class="game-box-btn box2 displayFlex"></div>
+                <div class="game-box-btn box3 displayFlex"></div>
+                <div class="game-box-btn box4 displayFlex"></div>
+                <div class="game-box-btn box5 displayFlex"></div>
+                <div class="game-box-btn box6 displayFlex"></div>
+                <div class="game-box-btn box7 displayFlex"></div>
+                <div class="game-box-btn box8 displayFlex"></div>
+            </div>
 
 
         </section>
-    </div>
-    <div class="choice">
-        <p>Select The options!!!</p>
-        <div class="user-choice">
-            <div class="team-choice team-X">X</div>
-            <div class="team-choice team-O">O</div>
-        </div>
-
-    </div>
-    <div class="start-popup hide">
-        <div class="message">Sample Message</div>
-        <div class="round-massege">Round <span class="round-mes-scroe">1</span></div>
-        <button class="new-game">Continue Game</button>
-    </div>
-    <div class="cont">
-        <div class="point-box">
-            <div class="user-box">
-                <div class="user-pic">
-                    <img src="/images/person_24dp_0000F5_FILL0_wght400_GRAD0_opsz24.png" alt="User-X">
-                    <div class="player">Team-X </div>
-                </div>
-                <div class="user-point">0</div>
-            </div>
-            <div class="side">
-                <div class="vs">v/s</div>
-                <div class="round">Round <span class="round-score">1</span></div>
-            </div>
-            <div class="cpu-box">
-
-                <div class="cpu-point">0</div>
-                <div class="cpu-pic">
-                    <img src="/images/person_24dp_0000F5_FILL0_wght400_GRAD0_opsz24.png" alt="User-Y">
-                    <div class="player">Team-O</div>
-                </div>
-            </div>
-        </div>
-
-        <div class="turn-opt">
-            <div class="text">X</div>
-            <div class="text">O</div>
-            <div class="slider slider-X slider-O"></div>
-            <div class="gritting-slider hide-grit win-grit draw-grit">
-                <h2>Winner is <span>X</span></h2>
-            </div>
-
-        </div>
-        <div class="align">
-            <!-- <div class="text-1">0</div> -->
-            <div class="gamebox">
-                <div class="game-opt-btn"></div>
-                <div class="game-opt-btn"></div>
-                <div class="game-opt-btn"></div>
-                <div class="game-opt-btn"></div>
-                <div class="game-opt-btn"></div>
-                <div class="game-opt-btn"></div>
-                <div class="game-opt-btn"></div>
-                <div class="game-opt-btn"></div>
-                <div class="game-opt-btn"></div>
-            </div>
-            <!-- <div class="text-2">0</div> -->
-            <div class="div2">
-                <button class="button reset-bnt hide">RESET MATCH</button>
-            </div>
-        </div>
+        <div class="btnOfReset displayFlex"><button class="reset-bnt">Reset Match</button></div>
     </div>
     <script src="script.js"></script>
 </body>
