score counting part is working progress

--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -99,7 +99,7 @@
         </section>
     </div>
     <div class="popUpMss displayFlex hide">
-        <p>You are winner</p>
+        <p class="isWinMas"></p>
         <button class="continueBtn">Continue</button>
     </div>
     <div class="contOfGame gridLayout">
@@ -115,7 +115,7 @@
                 <div class="round">Round 1</div>
             </div>
             <div class="isYBox activeMode displayFlex">
-                <div class="scoreY">
+                <div class="scoreO">
                     0
                 </div>
                 <p>Team-Y</p>
