draw calculation is now done

--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -118,7 +118,7 @@
                 <div class="scoreO">
                     0
                 </div>
-                <p>Team-Y</p>
+                <p>Team-O</p>
             </div>
 
         </div>
