Winning card is updated

--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -111,14 +111,34 @@
             </ul>
         </section>
     </div>
-    <div class="popUpMss displayFlex hide">
-        <p class="isWinMas">Continue Match</p>
-<button class="btn-23 continueBtn">
-  <span class="text">Continue</span>
-  <span aria-hidden="" class="marquee">Continue</span>
-</button>
+    <div class="popUpMss hide">
+        <div class="card__container">
+            <article class="card__article">
+                <div class="card__data">
+                    <img src="/images/img1.png" alt="card image" class="card__img">
 
+                    <h1 class="card__title">Shield & Shining Star</h1>
+                    <p class="card__description"></p>
+                    <button class="btn-23 continueBtn">
+                        <span class="text">Continue</span>
+                        <span aria-hidden="" class="marquee">Continue</span>
+                      </button>
+                </div>
+
+                <div class="card__shapes">
+                    <span class="card__shape"></span>
+                    <span class="card__shape"></span>
+                    <span class="card__shape"></span>
+                    <span class="card__shape"></span>
+                    <span class="card__shape"></span>
+                    <span class="card__shape"></span>
+                    <span class="card__shape"></span>
+                    <span class="card__shape"></span>
+                </div>
+            </article>
+        </div>
     </div>
+
     <div class="contOfGame gridLayout">
         <div class="scroeBox gridLayout">
             <div class="isXBox activeMode displayFlex">
