--- a/Tic-Tac-Toe/nav.html
+++ b/Tic-Tac-Toe/nav.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="nav.css">
 </head>
 <body>
-    <nav class="sidebar navbar mini-sideBar">
+    <!-- <nav class="sidebar navbar mini-sideBar">
         <section class="main-sidebar">
             <div class="gameLogoHead">
                 <img src="" alt="">
@@ -18,6 +18,9 @@
             </div>
         </section>
         <section class="user-sidebar"></section>
-    </nav>
+    </nav> -->
+   
+
+</html>
 </body>
 </html>
