gaming background and game box is now udpdated

--- a/NORMAL FOLDER/Tic-Tac-Toe/index.html
+++ b/NORMAL FOLDER/Tic-Tac-Toe/index.html
@@ -14,7 +14,7 @@
     <div class="sidebar mini-sidebar">
         <section>
             <div class="logo-head">
-                <img src="/images/tic-tac-toe.png" alt="Logo">
+                <img src="/NORMAL FOLDER/images/tic-tac-toe.png" alt="Logo">
                 <div class="text-head header-text">
                     FUN-GAME-ZONE
                     <br>Web-Game
@@ -115,7 +115,7 @@
         <div class="card__container">
             <article class="card__article">
                 <div class="card__data">
-                    <img src="/images/img1.png" alt="card image" class="card__img">
+                    <img src="/NORMAL FOLDER//images/img1.png" alt="card image" class="card__img">
                     <p class="card__title"></p>
                     <h1 class="card__description">Shield & Shining Star</h1>
                    
