--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             
         </picture>
         <ul>
-            <li></li>
-            <li></li>
+            <li><a href="./Rock Paper Scissors/rock-paper-scissor.html">Rock Paper Scissors</a></li>
+            <li><a href="./Tic-Tac-Toe/index.html">Tic-Tac-Toe</a></li>
             <li></li>
             <li></li>
         </ul>
