tic tac toe game is now updated

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="./Rock Paper Scissors/rock-paper-scissor.html">Rock Paper Scissors</a></li>
             <li><a href="./Tic-Tac-Toe/index.html">Tic-Tac-Toe</a></li>
-            <li></li>
+            <li><button>Hello</button></li>
             <li></li>
         </ul>
     </nav>
